Sat Nov  4 23:57:14 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:	Handle long optional header

Sat Nov  4 19:08:47 CET 2006 (acab)
-----------------------------------
  * libclamav/petite.c:	Fix max section count

Sat Nov  4 18:52:36 CET 2006 (acab)
-----------------------------------
  * libclamav/pe.c:	Move pe_plus return to a more convenient location

Fri Nov  3 21:28:13 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Fix compilation error in session mode, bug 115

Fri Nov  3 19:47:42 GMT 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Partial fix for bug 33

Thu Nov  2 09:36:06 GMT 2006 (njh)
----------------------------------
  * libclamav/js/jsint.h:	Fix compilation error under FreeBSD6.1

Thu Nov  2 00:20:36 CET 2006 (tk)
---------------------------------
  * freshclam/manager.c: make update messages more precise

Wed Nov  1 19:15:57 CET 2006 (tk)
---------------------------------
  * libclamav/others.c: add cli_strdup(), thanks to NJH

Wed Nov  1 18:59:48 CET 2006 (tk)
---------------------------------
  * libclamav: add support for self-extracting MS Cabinet archives
	       Thanks to Christoph for a nice bunch of test files.

Wed Nov  1 17:03:54 CET 2006 (tk)
---------------------------------
  * libclamav: minor clamav.h (and related) cleanup

Mon Oct 30 19:29:36 CET 2006 (tk)
---------------------------------
  * 0.90RC2 (released with JS and PST code removed)

Mon Oct 30 14:20:40 GMT 2006 (njh)
----------------------------------
  * clamav-milter:	Added support for daily.inc/daily.info (patch from TK)

Mon Oct 30 12:24:09 CET 2006 (tk)
---------------------------------
  * libclamav/readdb.c: cl_stat() functions now check .info files

Sun Oct 29 20:12:26 CET 2006 (tk)
---------------------------------
  * shared/misc.c: freshdbdir now supports daily.inc

Sun Oct 29 19:45:07 CET 2006 (tk)
---------------------------------
  * clamd: change stack size at the right place (closes bug#103)